Fix a problem with a too long dropdown menu

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@
   margin-top: 60px;
   z-index: 1010 !important;
 }
+
+.dropdown-menu {
+  overflow-y: auto;
+  max-height: 80vh;
+}
